<resources>
    <string name="app_name">MyContactOnlyan_3</string>
    <string name="version_1_0_0">version 1 0 0</string>
    <string name="choose">Choose</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="first_name">First name</string>
    <string name="save">Save</string>
    <string name="edit_contact">Edit contact</string>
    <string name="contact">Contact</string>
    <string name="refresh">Refresh</string>
    <string name="empty">Empty</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="sms_code">Sms code</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="you_are_not_connected_to_the_internet">You are not connected to the Internet!</string>
</resources>