<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/image_contact"
        app:layout_constraintStart_toStartOf="@id/image_contact"
        app:layout_constraintBottom_toTopOf="@id/image_contact"
        android:text="Verification"
        android:textColor="#034C45"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:textSize="60sp"

        />
    <ImageView
        android:id="@+id/image_contact"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_contact"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputPhone"
        app:layout_constraintVertical_bias="0.74"
        app:tint="#0CBAAA" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPhone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/inputCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="13" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sms_code"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_btn"
        android:elevation="150dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLoading"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_btn"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_submit">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />
    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="gone">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_internet"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/no_internet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.38"
                app:tint="#E91E63" />

            <TextView
                android:id="@+id/no_connection_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/you_are_not_connected_to_the_internet"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/image_internet"
                app:layout_constraintStart_toStartOf="@id/image_internet"
                app:layout_constraintTop_toBottomOf="@id/image_internet" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/refreshBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_connection_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
