<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8FD">

    <TextView
        android:id="@+id/contact_status_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/statusBarColor"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/log_auth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@id/contact_status_bar"
        app:layout_constraintEnd_toEndOf="@id/contact_status_bar"
        app:layout_constraintBottom_toBottomOf="@id/contact_status_bar"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_log_auth"
        app:tint="#FFF" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_status_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_contact"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:itemCount="8"
            tools:listitem="@layout/item_contact" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/containerEmpty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/contact_status_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/refreshLayout"
            app:layout_constraintEnd_toEndOf="@+id/refreshLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty"
                android:textColor="@color/textColor"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRefresh"
                style="@style/AppCompatButton"
                android:layout_width="200dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="28dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/refresh"
                android:textAllCaps="false" />

        </LinearLayout>
    </FrameLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="#47C3B7"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="#fff" />

</androidx.constraintlayout.widget.ConstraintLayout>